--- a/index.html
+++ b/index.html
@@ -1,1 +1,222 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Muhammad Suliman - Flutter Projects</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #f3f4f6;
+            line-height: 1.6;
+        }
+        .project-card {
+            background-color: #ffffff;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+            display: flex;
+            flex-direction: column;
+            cursor: pointer;
+            overflow: hidden;
+        }
+        .project-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.12);
+        }
+        .header-bg {
+            background: linear-gradient(135deg, #6366f1, #8b5cf6);
+        }
+        .text-gradient {
+            background: linear-gradient(45deg, #6366f1, #8b5cf6);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+        .gallery-item {
+            position: relative;
+            cursor: pointer;
+            border-radius: 12px;
+            overflow: hidden;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+        }
+        .gallery-item:hover {
+            transform: translateY(-5px) scale(1.02);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+        }
+        .hidden {
+            display: none;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        .fade-in {
+            animation: fadeIn 0.5s ease-out;
+        }
+        #project-detail-page {
+            background-color: #ffffff;
+            border-radius: 12px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+            padding: 2.5rem;
+            margin-top: 3rem;
+            margin-bottom: 3rem;
+        }
+        #detail-project-gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 2rem;
+        }
+        #detail-project-gallery .gallery-item img {
+            width: 100%;
+            height: 250px;
+            object-fit: cover;
+            border-radius: 12px;
+            display: block;
+        }
+        
+        /* Enhanced Modal Styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0,0,0,0.9);
+            align-items: center;
+            justify-content: center;
+            animation: fadeIn 0.3s ease-out;
+        }
+        .modal-content {
+            max-width: 90%;
+            max-height: 90%;
+            object-fit: contain;
+            border-radius: 8px;
+            cursor: default;
+            animation: zoomIn 0.3s ease-out;
+        }
+        .close-button {
+            position: absolute;
+            top: 20px;
+            right: 30px;
+            color: white;
+            font-size: 40px;
+            font-weight: bold;
+            cursor: pointer;
+            z-index: 1001;
+            transition: 0.3s;
+        }
+        .close-button:hover {
+            color: #bbb;
+            transform: scale(1.1);
+        }
+        @keyframes zoomIn {
+            from {transform: scale(0.9); opacity: 0;}
+            to {transform: scale(1); opacity: 1;}
+        }
+    </style>
+</head>
+<body class="antialiased text-gray-800">
+    <div class="header-bg py-16 px-4 sm:px-6 lg:px-8 text-white rounded-b-3xl">
+        <div class="max-w-4xl mx-auto text-center">
+            <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold mb-4 leading-tight">
+                Muhammad Suliman
+            </h1>
+            <p class="text-xl sm:text-2xl font-light opacity-90">
+                Flutter Developer | My Projects Showcase
+            </p>
+        </div>
+    </div>
 
+    <!-- Main Project List Page -->
+    <main id="project-list-page" class="max-w-6xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
+        <section class="mb-12">
+            <h2 class="text-3xl sm:text-4xl font-bold text-center mb-8 text-gradient">My Featured Projects</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+
+                <!-- Project Card: Self-Serve -->
+                <div class="project-card p-6" onclick="showProjectDetails('self-serve')">
+                    <h3 class="text-xl font-semibold mb-3 text-gray-900">Self-Serve Restaurant App</h3>
+                    <p class="text-gray-600 mb-4 flex-grow">
+                        Developed a restaurant app allowing users to order food items and seamlessly pay via Stripe integration or physical card reader. Features included printer connection via LAN and Bluetooth, notification system, and Sqflite for local data storage. Implemented native Android and iOS Printer SDK in Flutter.
+                    </p>
+                    <div class="flex flex-wrap gap-2 text-sm mb-4 mt-auto">
+                        <span class="bg-indigo-100 text-indigo-700 px-3 py-1 rounded-full font-medium">Flutter</span>
+                        <span class="bg-green-100 text-green-700 px-3 py-1 rounded-full font-medium">Stripe API</span>
+                        <span class="bg-blue-100 text-blue-700 px-3 py-1 rounded-full font-medium">Printer SDK (Native)</span>
+                        <span class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full font-medium">Sqflite</span>
+                    </div>
+                </div>
+
+                <!-- Project Card: Online-Ordering Manager -->
+                <div class="project-card p-6" onclick="showProjectDetails('online-ordering-manager')">
+                    <h3 class="text-xl font-semibold mb-3 text-gray-900">Online-Ordering Manager Backend</h3>
+                    <p class="text-gray-600 mb-4 flex-grow">
+                        Engineered a backend application designed to efficiently manage incoming orders from a restaurant app. This project focused on optimizing workflow and enhancing operational efficiency for seamless order processing.
+                    </p>
+                    <div class="flex flex-wrap gap-2 text-sm mb-4 mt-auto">
+                        <span class="bg-yellow-100 text-yellow-700 px-3 py-1 rounded-full font-medium">Backend Development</span>
+                        <span class="bg-indigo-100 text-indigo-700 px-3 py-1 rounded-full font-medium">Order Management</span>
+                    </div>
+                </div>
+
+                <!-- Project Card: Click me Cursive -->
+                <div class="project-card p-6" onclick="showProjectDetails('click-me-cursive')">
+                    <h3 class="text-xl font-semibold mb-3 text-gray-900">Click me Cursive Children's App</h3>
+                    <p class="text-gray-600 mb-4 flex-grow">
+                        Developed an interactive children's app for alphabet learning with drawing features. Integrated microphone for pronunciation practice and voice-activated navigation to enhance the learning experience.
+                    </p>
+                    <div class="flex flex-wrap gap-2 text-sm mb-4 mt-auto">
+                        <span class="bg-indigo-100 text-indigo-700 px-3 py-1 rounded-full font-medium">Flutter</span>
+                        <span class="bg-pink-100 text-pink-700 px-3 py-1 rounded-full font-medium">Educational App</span>
+                        <span class="bg-red-100 text-red-700 px-3 py-1 rounded-full font-medium">Voice Recognition</span>
+                        <span class="bg-teal-100 text-teal-700 px-3 py-1 rounded-full font-medium">Interactive UI</span>
+                    </div>
+                </div>
+
+                <!-- Project Card: IHealthCure -->
+                <div class="project-card p-6" onclick="showProjectDetails('ihealthcure')">
+                    <h3 class="text-xl font-semibold mb-3 text-gray-900">IHealthCure Healthcare App</h3>
+                    <p class="text-gray-600 mb-4 flex-grow">
+                        A comprehensive healthcare app for appointment booking, including a rider role for blood sample collection. Supports online payments and integrates with physical health monitoring devices (blood pressure, glucose levels) for real-time vital parameter measurement.
+                    </p>
+                    <div class="flex flex-wrap gap-2 text-sm mb-4 mt-auto">
+                        <span class="bg-indigo-100 text-indigo-700 px-3 py-1 rounded-full font-medium">Flutter</span>
+                        <span class="bg-red-100 text-red-700 px-3 py-1 rounded-full font-medium">Healthcare</span>
+                        <span class="bg-green-100 text-green-700 px-3 py-1 rounded-full font-medium">Payment Integration</span>
+                        <span class="bg-blue-100 text-blue-700 px-3 py-1 rounded-full font-medium">Device Integration</span>
+                    </div>
+                    <p class="text-xs text-gray-500 mt-2">Dates: August 2023 - December 2023</p>
+                </div>
+
+                <!-- Project Card: Medico App -->
+                <div class="project-card p-6" onclick="showProjectDetails('medico-app')">
+                    <h3 class="text-xl font-semibold mb-3 text-gray-900">Medico App (File Manager & Admin)</h3>
+                    <p class="text-gray-600 mb-4 flex-grow">
+                        A file manager app facilitating easy uploads, downloads, and offline access to files. It also features an integrated admin panel for managing posts, polls, and notifications, providing a comprehensive content management solution.
+                    </p>
+                    <div class="flex flex-wrap gap-2 text-sm mb-4 mt-auto">
+                        <span class="bg-indigo-100 text-indigo-700 px-3 py-1 rounded-full font-medium">File Management</span>
+                        <span class="bg-gray-100 text-gray-700 px-3 py-1 rounded-full font-medium">Admin Panel</span>
+                        <span class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full font-medium">Content Management</span>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </main>
+
+    <!-- Project Detail Page (Initially Hidden) -->
+    <section id="project-detail-page" class="max-w-6xl mx-auto py-12 px-4 sm:px-6 lg:px-8 hidden fade-in">
+        <button onclick="showProjectList()" class="mb-8 flex items-center text-indigo-600 hover:text-indigo-800 transition-colors duration-200 font-medium">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
+            </svg>
+            Back to Projects
+        </button>
+
+        <h2 id="detail-project-title" class="...
